# lsmcp

./: .gitignore  .mcp.json  .oxlintignore  .versionrc.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  INTEGRATION_TEST_FIX_SUMMARY.md  LSP_SUPPORTED_TABLE.md  README.md  RELEASE_NOTES.md  TODO.md  biome.json  create-all-factory-functions.sh  dead_code.txt  dead_code2.txt  fix-all-tools.sh  gitaware-glob-performance-analysis.md  lsmcp.schema.json  measure-compression.js  oxlintrc.json  package.json  pnpm-lock.yaml  test-config-defaults.ts  test-fsharp-fix-verification.ts  test-fsharp-lsp.ts  test-incremental-demo.ts  test-incremental-index.ts  test-mcp-call.sh  test-mcp-full.sh  test-mcp-hover.sh  test-mcp-index.ts  test-mcp-memory.sh  test-mcp-search.sh  test-mcp-tools.sh  test-mcp.sh  test-onboarding.js  test-pyright-diagnostics.ts  test-rename.ts  test-unified-index.ts  (+4 more)
.claude/: settings.json
.github/: dependabot.yml
.husky/: pre-commit
.lsmcp/: config.json
benchmarks/: debug-search.ts  fast-search-benchmark.ts  search-pattern-benchmark.ts  simple-search-benchmark.ts
docs/: HASKELL_SETUP.md  MCP_CLIENT_SETUP.md  TOOL_REFERENCE.md  config-schema.md  language-specific-features.md  lsif-spec.md  memory-report-system-ja.md  memory-report-system.md  multi-language-external-library-support.md  refactring-plan-2025-08-10.md  serena-comparison.md
examples/python-project/: .mcp.json  README.md  errors.py  main.py  pyproject.toml  test_definition.py
examples/python-project/.lsmcp/cache/: symbols.db
examples/python-project/.lsmcp/memories/: pyright_test_results.md
(+694 files in other folders)
