[project]
name = "testproj"
requires-python = ">=3.12"
version = "0.0.1"

[tool.pyright]
exclude = ["**/node_modules", "**/__pycache__"]
include = ["**/*.py"]
pythonPlatform = "Linux"
pythonVersion = "3.12"
reportMissingImports = true
reportMissingTypeStubs = false

[tool.pyright.analysis]
autoSearchPaths = true
diagnosticMode = "workspace"
useLibraryCodeForTypes = true

[dependency-groups]
dev = [
  "pyright>=1.1.403",
]